Fix table width on Safari #14

--- a/frontend/assets/css/si.css
+++ b/frontend/assets/css/si.css
@@ -8,3 +8,8 @@ div.navbar-branding > p {
     font-weight: bold;
     padding-top: 10px;
 }
+
+/* testing a fix for https://archivesspace.atlassian.net/browse/ANW-2424 */
+table .col {
+    width: auto;
+}
